# flask-wordle

./: .gitignore  .prettierignore  .prettierrc.mjs  README.md  compile.py  deploy.py  deploy.sh  environment.dev.yml  environment.yml  eslint.config.mjs  node.sh  package-lock.json  package.json  pyproject.toml  tailwind.config.mjs  tsconfig.json  webapp.py
.github/: dependabot.yml
.github/workflows/: deploy.yml
docs/: future.md  mamba.md  miniconda.md  node.md
test/: __init__.py  main.py
webapp/: __init__.py  create.py
webapp/config/: __init__.py  _filter.py  manager.py  setting.py
webapp/handler/: logger.py  scheduler.py  wordle.py
webapp/handler/types/: __init__.py  alias.py  manipulator.py
webapp/page/: __init__.py  _enums.py  _wordle.py  api.py  hard.py  normal.py  root.py
webapp/sass/: base.sass  style.sass  tailwind.sass
webapp/sass/metro/: _date.sass  _index.sass  _nav.sass  _table.sass
webapp/script/: dom.ts  script.ts
webapp/templates/: _template.html  common.html  meta.html
webapp/templates/home/: index.html
webapp/templates/normal/: common.html  form.html  normal.html
webapp/templates/temp/: temp.html
webapp/templates/wordle/: form.html  hard.html  normal.html
webpack/: webpack.common.mjs  webpack.dev.mjs  webpack.prod.mjs
words/: cheat.txt  default.txt
